# open_interest_alerts

./: Cargo.toml  README.md
src/: logger.rs  main.rs
src/modules/: mod.rs  ratio_fetcher.rs  scheduler.rs  telegram_utils.rs
