[package]
name = "open_interest_alerts"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
num-format = "0.4.4"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simplelog = "0.12.2"
teloxide = "0.13.0"
tokio = "1.41.1"
